chore: prepare to 2024.2+ builds, switch plugin to intellij-gradle-plugin 2.x